frontend/tests/errors/ER-001/invalid_operator/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: invalid operator


&^main() -> #i32 {
    5 ++ 3
}
